# llm-benchmark

./: .gitignore  README.md  aggregate_results.py  bench_long_prompt.py  cases.json  judge_claude.py  pyproject.toml  run_bench.py  run_eval.py  todo.md
docs/: 08042026_experiments_glm5_1.md  08042026_glm5_1_benchmark.md  19042026_bengali_ocr_finetuning.md  benchmark_design.md  c4model.md  dsa_metal_implementation_plan.md  evaluation_frameworks.md  index.md  results.md
tests/: test_deepeval.py  test_scoring.py
