[project]
name = "llm-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.89.0",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
